--- a/app/views/paper_trail_manager/changes/index.html.erb
+++ b/app/views/paper_trail_manager/changes/index.html.erb
@@ -10,7 +10,7 @@
 <table class='changes_table'>
   <tfoot>
     <tr>
-      <td colspan='2'>
+      <td class='change_style' colspan='2'>
         <%= paginate @versions %>
       </td>
     </tr>
