--- a/app/views/paper_trail_manager/changes/_version.html.erb
+++ b/app/views/paper_trail_manager/changes/_version.html.erb
@@ -4,7 +4,7 @@
     <div class='date'> <%= version.created_at.strftime('%Y-%m-%d') %> </div>
     <div class='time'> <%= version.created_at.strftime('%H:%M:%S') %> </div>
   </td>
-  <td class='change_details change_style'>
+  <td class='change_details'>
     <p class='change_details_description'>
       <strong class='event'><%= version.event %></strong>
       <%= change_item_link(version) %>
