--- a/app/views/paper_trail_manager/changes/_version.html.erb
+++ b/app/views/paper_trail_manager/changes/_version.html.erb
@@ -1,6 +1,6 @@
 <tr class='change_row <%= "change_event_#{version.event} #{version.event} #{version.event}, #{version.item_type.downcase}" %>'>
   <td class='change_time'>
-    <span class='change_id'>Change #<%= version.id %></span>
+    <button onclick="jsonRetriever()"><span class='change_id'>Change #<%= version.id %></span></button>
     <div class='date'> <%= version.created_at.strftime('%Y-%m-%d') %> </div>
     <div class='time'> <%= version.created_at.strftime('%H:%M:%S') %> </div>
   </td>
