Testing if changes occur in kimball

--- a/app/views/paper_trail_manager/changes/_version.html.erb
+++ b/app/views/paper_trail_manager/changes/_version.html.erb
@@ -1,6 +1,6 @@
 <tr class='change_row <%= "change_event_#{version.event} #{version.event} #{version.event}, #{version.item_type.downcase}" %>'>
   <a data-toggle="modal" data-target="#myModal"><td class='change_time'>
-    <span class='change_id'>Change #<%= version.id %></span>
+    <span class='change_id'><strong>Change #<%= version.id %><strong></span>
     <div class='date'> <%= version.created_at.strftime('%Y-%m-%d') %> </div>
     <div class='time'> <%= version.created_at.strftime('%H:%M:%S') %> </div>
   </td></a>
