--- a/app/views/paper_trail_manager/changes/show.html.erb
+++ b/app/views/paper_trail_manager/changes/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Change <%= @version.id %></h1>
+<a data-toggle="modal" data-target="#myModal"><h1>Change <%= @version.id %></h1></a>
 
 <table class='changes_table'>
   <tr class='changes_header'>
