fixing the user_path method so that it is dynamic and configurable

--- a/app/views/paper_trail_manager/changes/_version.html.erb
+++ b/app/views/paper_trail_manager/changes/_version.html.erb
@@ -11,7 +11,7 @@
       <% if PaperTrailManager.whodunnit_class && version.whodunnit %>
         <% if user = PaperTrailManager.whodunnit_class.find(version.whodunnit) rescue nil %>
           <% if PaperTrailManager.user_path_method && user %>
-            by <%= link_to(h(user.send(PaperTrailManager.whodunnit_name_method)), send(:user_path_method, user)) %>
+            by <%= link_to(h(user.send(PaperTrailManager.whodunnit_name_method)), send(PaperTrailManager.user_path_method, user)) %>
           <% else %>
             by <%= h(user.send(PaperTrailManager.whodunnit_name_method)) %>
           <% end %>
